--- a/ClangPowerTools/ClangPowerTools/packages.config
+++ b/ClangPowerTools/ClangPowerTools/packages.config
@@ -34,6 +34,7 @@
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net46" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net46" />
   <package id="System.Linq" version="4.1.0" targetFramework="net46" />
+  <package id="System.Management.Automation.dll" version="10.0.10586.0" targetFramework="net46" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net46" />
   <package id="System.Runtime" version="4.1.0" targetFramework="net46" />
   <package id="System.Threading" version="4.0.11" targetFramework="net46" />
