--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "pug src/pages --out www",
     "watch": "onchange \"src/pages\" -- npm run build",
     "serve": "http-server ./www",
-    "start": "npm run build && npm run serve",
+    "start": "concurrently \"npm run serve\" \"npm run watch\"",
     "deploy:invalidate-cdn": "aws cloudfront create-invalidation --distribution-id E78YHWTAB3YO9 --paths /*",
     "deploy:s3": "aws s3 sync www s3://advinst-clang --delete ",
     "deploy": "npm run build && npm run deploy:s3 && npm run deploy:invalidate-cdn"
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/Caphyon/clang-power-tools#readme",
   "devDependencies": {
+    "concurrently": "4.1.0",
     "http-server": "0.11.1",
     "onchange": "5.2.0",
     "pug-cli": "1.0.0-alpha6",
